<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context="com.midtrans.sdk.uiflow.fragments.AddCardDetailsFragment">

    <RelativeLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_card_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_card_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789 "
                android:hint="@string/hint_card_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="19"
                android:nextFocusDown="@+id/et_exp_date"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/expiry_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_card_no"
            android:layout_marginTop="@dimen/eight_dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/eight_dp"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/exp_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <EditText
                    android:id="@+id/et_exp_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/hint_expiry_date"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLength="5"
                        android:nextFocusDown="@+id/et_cvv"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/cvv_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_cvv"
                        android:imeOptions="actionDone"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/image_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/description_help_icon"
                    android:padding="8dp"
                    android:src="@drawable/ic_cvvinfo" />
            </RelativeLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_store_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expiry_date_layout"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/save_card_message" />

        <ImageView
            android:id="@+id/image_question_save_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expiry_date_layout"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/cb_store_card"
            android:layout_toRightOf="@id/cb_store_card"
            android:contentDescription="@string/description_help_icon"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:src="@drawable/ic_cvvinfo" />

        <Button
            android:id="@+id/scan_card"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cb_store_card"
            android:text="@string/btn_scan_card"
            android:textColor="?colorPrimary"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/cb_store_card">

            <com.midtrans.sdk.uiflow.widgets.MorphingButton
                android:id="@+id/btnMorph1"
                android:layout_width="@dimen/btn_height"
                android:layout_height="@dimen/btn_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_pay_now"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_six_dp"
                android:layout_alignParentBottom="true"
                android:text="@string/pay_now"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:visibility="visible" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>