...

        <com.midtrans.sdk.ui.widgets.DefaultTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/eight_dp"
            android:paddingTop="@dimen/four_dp"
            android:text="@string/virtual_account_number"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/secondary_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.midtrans.sdk.ui.widgets.DefaultTextView
                android:id="@+id/text_virtual_account_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:layout_weight="1"
...
